<resources>
    <string name="app_name">Tutorial Project</string>
    <string name="title">Splash</string>
    <string name="start">Start</string>
    <string name="information_slot">Welcome to the first app \n Rodrigo Albino \n nº 49027 \n Group I</string>

    <!-- String for Settings  -->
    <string name="green_color">Green</string>
    <string name="darker_blue">Dark gradient</string>
    <string name="buttonColor">Button color change</string>
    <string name="buttonsSettings">Buttons Settings</string>
    <string name="pageSettings">Page Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- String for Settings  -->

    <!-- String for the Main Fragments -->
    <string name="canvas">Canvas</string>
    <string name="palette">Palette</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="backButton">Back</string>
    <string name="map">Map</string>
    <string name="Shake">Simulates the Shaking to Erase</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- String for the Main Fragments -->


</resources>