<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7DB0D8"
    tools:context=".Settings">

    <Button
        android:id="@+id/back_settings"
        android:layout_width="86dp"
        android:layout_height="56dp"
        android:layout_marginStart="243dp"
        android:layout_marginBottom="4dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/PageSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#939191"
            android:gravity="center"
            android:text="@string/pageSettings"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/greenColor"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:onClick="changeToGreen"
            android:text="@string/green_color"
            android:textAlignment="center"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/darker_blue"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:text="@string/darker_blue"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#959595"
            android:gravity="center"
            android:text="@string/buttonsSettings"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/change_color"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:text="@string/buttonColor"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>